# envx

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: main.yml
docs/examples/: .env.schema
examples/: .env.local  .env.production  .env.staging
src/: cli.rs  crypto.rs  lib.rs  main.rs  parser.rs
src/commands/: audit.rs  diff.rs  encrypt.rs  mod.rs
