[package]
name = "envx-secure"
version = "0.1.0"
edition = "2021"
description = "A CLI for .env file management: diff, audit, and encrypt"
license = "MIT"

[[bin]]
name = "envx"
path = "src/main.rs"

[dependencies]
clap        = { version = "4", features = ["derive"] }
owo-colors  = "3"
anyhow      = "1"
age         = "0.10"
rand        = "0.8"
indexmap    = "2"
rpassword   = "7"
